mdapipkg/objects/Equipment_Maintenance_Item__c.object
<CustomObject>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No spare parts meet this description or name.</errorMessage>
            <filterItems>
                <field>Product2.Replacement_Part__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Equipment Maintenance Items</relationshipLabel>
        <relationshipName>Equipment_Maintenance_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Request__c</fullName>
        <label>Maintenance Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Equipment Maintenance Items</relationshipLabel>
        <relationshipName>Equipment_Maintenance_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Equipment Maintenance Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Equipment__c</columns>
        <columns>Maintenance_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PART-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Maintenance Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>